--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,4 @@
+
 .App {
     display: flex;
     flex-direction: column;
@@ -8,17 +9,34 @@
         height: 90%;
         display: flex;
         align-items: center;
+        @media (max-width: 910px){
+            height: 100%;
+        }
         .container{
             padding: 5%;
             padding-top: 0%;
             width: 100%;
-            height: 310px;
+            height: 330px;
             overflow-y: scroll;
+            @media ( max-width:910px) {
+                margin-top: 60px;
+              
+                display: flex;
+                justify-content: center;
+                height: 100%;
+            }
+            @media (min-width:1400px){
+                height: 600px;
+             }
         }
     }
     .particles {
         position: absolute;
         z-index: -1000;
+    }
+    @media ( max-width:910px) {
+        display: block;
+        height: unset;
     }
 }
 
