--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -7,6 +7,18 @@
     margin-left: 2%;
     margin-top: 1%;
     height: 50px;
+    .logo{
+        display: flex;
+    }
+    .menu-icon {
+        display: none;
+        font-size: 25px;
+          margin: 10px; 
+          margin-right: 15px;
+         @media (max-width:910px) {
+             display: block;
+         }
+    }
     p{  
         margin: 0;
         font-family: "snowballs";
@@ -21,5 +33,16 @@
         span {
             margin-left: 7px;
         }
+    }
+    @media ( max-width:910px) {
+        position: fixed;
+        top: 0;
+        left: 0;
+        z-index: 1000;
+        margin: 0%;
+        padding: 10px;
+        width: 95%;
+
+        background-color: white;
     }
 }
