--- a/src/components/Menu/Menu.scss
+++ b/src/components/Menu/Menu.scss
@@ -8,15 +8,25 @@
         justify-content: center;
         list-style: none;
         padding: 0;
+        @media (min-width:1400px){
+            margin-right: 10%;
+        }
         li {
             padding: 5px 10px; 
             margin: 5px 25px;
             margin-bottom: 10px;
             width: 30px;
             cursor: pointer;
+            @media (min-width:1400px){
+                font-size: 30px;
+                margin: 5px 35px;
+            }
             .link {
                 color: black;
                 text-decoration: none;
+                @media (min-width:1400px){
+                    font-size: 25px;
+                }
             }
             .link:hover {
                 text-decoration: line-through #e1ad01;
@@ -32,6 +42,9 @@
             padding: 1px;
             border-radius: 15px;
             background-color:#e1ad01;
+            @media (min-width:1400px){
+               left: -30px;
+            }
         }
 
         .is-active-about::after{
@@ -44,6 +57,9 @@
             padding: 1px;
             border-radius: 15px;
             background-color:#e1ad01;
+            @media (min-width:1400px){
+                left: -35px;
+             }
 
         }
         .is-active-skills::after {
@@ -56,17 +72,23 @@
             padding: 1px;
             border-radius: 15px;
             background-color:#e1ad01;
+            @media (min-width:1400px){
+                left: -40px;
+             }
         }
         .is-active-projects::after {
             content: "aa"; 
             position: relative;
             bottom: -15px;
-            left: -40px;
+            left: -20px;
             font-size: 6px;
             color: #e1ad01;
             padding: 1px;
             border-radius: 15px;
             background-color:#e1ad01;
+            @media (min-width:1400px){
+                left: -30px;
+             }
         }
         .is-active-contact::after {
             content: "aa"; 
@@ -78,6 +100,12 @@
             padding: 1px;
             border-radius: 15px;
             background-color:#e1ad01;
+            @media (min-width:1400px){
+               left: -50px;
+            }
         }
     }}
+    @media ( max-width:910px) {
+        display: none;
+    }
 }
