--- a/src/components/Time-line-item/item.scss
+++ b/src/components/Time-line-item/item.scss
@@ -1,26 +1,53 @@
 .item-container {
     font-size: 11px;
-    width: 300px;
+    width:300px;
     height: 100px;
     border-bottom:#e1ad01 solid 2px;
+    @media ( max-width: 800px) {
+        border-left:#e1ad01 solid 2px ;
+        border-bottom:none;
+        padding-bottom: 20px;
+    }
+    @media (min-width:1400px){
+
+        height: 170px;
+     }
     .item {
         padding-right: 10px;
         padding-left: 8px;
+        @media ( max-width: 800px){
+            margin-left: 10px;
+        }
+       
         
         .title{
             text-transform: uppercase;
             height: 36px;
             margin: 0;
+            @media ( min-width: 1400px){
+                height: 60px;
+                font-size: 20px;
+            }
+           
         }
         .date {
             height: 36px;
             margin:0;
             margin-top: 5px;
+            @media ( min-width: 1400px){
+                height: 60px;
+                font-size: 20px;
+            }
         }
         .description {
             height: 36px;
             margin: 0;
             margin-top: -5px;
+            @media ( min-width: 1400px){
+                height: 60px;
+                font-size: 20px;
+            }
+
         }
     }
     .circle {
@@ -33,6 +60,9 @@
         top: -15px;
         left: -10px;
         cursor: pointer;
+        @media ( max-width: 800px) {
+            top:-110px;
+        }
     }
     .circle:hover{
         background-color: #e1ad01;
