--- a/src/pages/About/About.scss
+++ b/src/pages/About/About.scss
@@ -6,11 +6,27 @@
     .about {
         display: flex;
         padding-bottom: 6%;
+        @media (max-width: 500px){
+            flex-wrap: wrap-reverse;
+            justify-content: center;
+            align-items: center;
+        }
         .about-text {
             width: 50%;
+            @media ( max-width: 550px){
+                width: 400px;
+                text-align: center;
+            }
+            @media (min-width:1400px){
+                font-size: 30px;
+             }
+            .resume{
+                @media (max-width: 550px){
+                    margin-left: 25%;
+                }
+            }
         }
         .picture-container {
-            width: 50%;
             .picture {
                 margin-left: 150px;
                 margin-bottom: 50px;
@@ -20,6 +36,14 @@
                 width: 200px;
                 height: 200px;
                 border-radius: 100px;
+                @media ( max-width: 550px){
+                    margin: 0;
+                }
+                @media (min-width:1400px){
+                    width: 400px;
+                    height: 400px;
+                    border-radius: 200px;
+                 }
             }
         }
     }
@@ -27,6 +51,12 @@
         text-align: center;
         padding-bottom: 10%;
         margin-right: 30px;
+        @media ( max-width: 550px){
+            margin: 0;
+        }
+        @media (min-width:1400px){
+           font-size: 35px;
+         }
     }
     .education {
         padding-bottom: 14%;
@@ -34,6 +64,12 @@
         h2 {
             margin: 0;
             margin-bottom: 5%;
+            @media ( max-width: 550px){
+                margin-bottom: 10%;
+            }
+            @media (min-width:1400px){
+                font-size: 30px;
+             }
         }
     }
     .experience { 
@@ -42,9 +78,14 @@
         h2 {
             margin: 0;
             margin-bottom: 5%;
+            @media ( max-width: 550px){
+                margin-bottom: 10%;
+            }
+            @media (min-width:1400px){
+                font-size: 30px;
+             }
         }
     }
-    
 }
 
 
