--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -9,6 +9,8 @@
     height: 50px;
     .logo{
         display: flex;
+        justify-content: center;
+        align-items: center;
     }
     .menu-icon {
         display: none;
