--- a/src/pages/About/About.scss
+++ b/src/pages/About/About.scss
@@ -22,7 +22,7 @@
              }
             .resume{
                 @media (max-width: 550px){
-                    margin-left: 25%;
+                    margin-left: 21%;
                 }
             }
         }
@@ -53,6 +53,8 @@
         margin-right: 30px;
         @media ( max-width: 550px){
             margin: 0;
+            margin-right: 2%;
+            margin-top: 15%;
         }
         @media (min-width:1400px){
            font-size: 35px;
