--- a/src/components/CusttomButton/Custtom-button.scss
+++ b/src/components/CusttomButton/Custtom-button.scss
@@ -1,6 +1,8 @@
 .button-container {
     margin-top: 50px;
+    
     button {
+        cursor: pointer;
         background-color: transparent;
         border: #e1ad01 solid 2px;
         outline: none;
@@ -28,4 +30,24 @@
               }
         }
     }
+}
+.inverted {
+    button{
+    cursor: pointer;
+    background-color: #e1ad01;
+        border: #e1ad01 solid 2px;
+        outline: none;
+        border-radius: 20px;
+        color: black;
+        padding: 10px 20px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        a {
+            color: black;
+            text-decoration: none;
+            font-weight: 600;
+            margin-left: 10px;
+            margin-top: 5px;
+        }}
 }
