--- a/src/index.scss
+++ b/src/index.scss
@@ -7,7 +7,7 @@
   src: url("./fonts/monofonto.ttf");
   font-family: "monofonto";
 }
-
+$main : white;
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -17,7 +17,8 @@ body {
   -moz-osx-font-smoothing: grayscale;
   font-family: 'monofonto';
   // height: 100vh;
-}
+  background: $main;
+  }
 ::-webkit-scrollbar {
   display: none;
 }
