--- a/src/pages/About/About.scss
+++ b/src/pages/About/About.scss
@@ -43,6 +43,7 @@
                     width: 400px;
                     height: 400px;
                     border-radius: 200px;
+                    margin-top: 50px;
                  }
             }
         }
