--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -1,69 +1,68 @@
 .home-container {
-    display: flex;
-    justify-content: center;
-    width: 100%;
-    height: 90%;
-    margin-top: 5%;
-    .title {
-        width: 60%;
-        span{
-               font-family: 'snowballs';
-               font-weight: 100;
-               font-size: 72px;
-               color:#e1ad01 ;      
-               @media ( max-width: 550px){
-                    font-size: 50px;
-                }
-               @media (min-width:1400px){
-                   font-size: 102px;
-                }
-        }
-        @media ( max-width: 550px){
-            width: 100%;
-        }
-        @media (min-width:1400px){
-            font-size: 30px;
-         }
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  margin-top: 5%;
+  overflow: hidden;
+  .title {
+    width: 60%;
+    span {
+      font-family: "snowballs";
+      font-weight: 100;
+      font-size: 72px;
+      color: #e1ad01;
+      @media (max-width: 550px) {
+        font-size: 50px;
+      }
+      @media (min-width: 1400px) {
+        font-size: 102px;
+      }
     }
-    .svg-container { 
-         width: 50%;
-        .svg {
-        margin-left: 100px;
-        border-radius: 20px;
-        font-size: 250px;
-        color: #e1ad01;
-        @media ( max-width:930px) {
-            margin-left: 5%;
-        }
-        @media ( max-width: 550px){
-            font-size: 200px;
-            margin: 0;
-            margin-left: -20px;
-        }
-        @media (min-width:1400px){
-            font-size: 500px;
-         }
+    @media (max-width: 550px) {
+      width: 100%;
     }
-}
-@media ( max-width:930px) {
-flex-wrap: wrap-reverse;
-margin-top: 100px;
-}
-@media ( max-width: 550px){
+    @media (min-width: 1400px) {
+      font-size: 30px;
+    }
+  }
+  .svg-container {
+    // width: 60%;
+    .svg {
+      margin-left: 50px;
+      border-radius: 20px;
+      //   font-size: 250px;
+      color: #e1ad01;
+      @media (max-width: 930px) {
+        margin-left: 5%;
+      }
+      @media (max-width: 550px) {
+        font-size: 200px;
+        margin: 0;
+        margin-left: -20px;
+      }
+      @media (min-width: 1400px) {
+        font-size: 500px;
+      }
+    }
+  }
+  @media (max-width: 930px) {
+    flex-wrap: wrap-reverse;
+    margin-top: 100px;
+  }
+  @media (max-width: 550px) {
     margin-top: 6%;
+  }
 }
-}
 
-
-
-.social-mobile{
-    display: none;
-    justify-content: center;
-    font-size: 25px;
-    margin-top: 15%;
-    margin-right: 10%;
-    justify-content: space-evenly;
-    @media (max-width: 930px){
-        display: flex;
-    }
+.social-mobile {
+  display: none;
+  justify-content: center;
+  font-size: 25px;
+  margin-top: 15%;
+  margin-right: 10%;
+  justify-content: space-evenly;
+  @media (max-width: 930px) {
+    display: flex;
+  }
 }
