--- a/src/pages/About/About.scss
+++ b/src/pages/About/About.scss
@@ -1,96 +1,92 @@
 .about-container {
+  display: flex;
+  flex-direction: column;
+  margin-top: 20px;
+  width: 80%;
+  .about {
     display: flex;
-    flex-direction: column;
-    margin-top: 20px;
-    width: 80%;
-    .about {
-        display: flex;
-        padding-bottom: 6%;
-        @media (max-width: 500px){
-            flex-wrap: wrap-reverse;
-            justify-content: center;
-            align-items: center;
-        }
-        .about-text {
-            width: 50%;
-            @media ( max-width: 550px){
-                width: 400px;
-                text-align: center;
-            }
-            @media (min-width:1400px){
-                font-size: 30px;
-             }
-            .resume{
-                @media (max-width: 550px){
-                    margin-left: 21%;
-                }
-            }
-        }
-        .picture-container {
-            .picture {
-                margin-left: 150px;
-                margin-bottom: 50px;
-                background-image: url("../../assets/pdp4.jpeg");
-                background-size: cover;
-                background-position: center;
-                width: 200px;
-                height: 200px;
-                border-radius: 100px;
-                @media ( max-width: 550px){
-                    margin: 0;
-                }
-                @media (min-width:1400px){
-                    width: 400px;
-                    height: 400px;
-                    border-radius: 200px;
-                    margin-top: 50px;
-                 }
-            }
-        }
+    padding-bottom: 6%;
+    @media (max-width: 500px) {
+      flex-wrap: wrap-reverse;
+      justify-content: center;
+      align-items: center;
     }
-    .scroll {
+    .about-text {
+      width: 50%;
+      @media (max-width: 550px) {
+        width: 400px;
         text-align: center;
-        padding-bottom: 10%;
-        margin-right: 30px;
-        @media ( max-width: 550px){
-            margin: 0;
-            margin-right: 2%;
-            margin-top: 15%;
+      }
+      @media (min-width: 1400px) {
+        font-size: 30px;
+      }
+      .resume {
+        @media (max-width: 550px) {
+          margin-left: 21%;
         }
-        @media (min-width:1400px){
-           font-size: 35px;
-         }
+      }
     }
-    .education {
-        padding-bottom: 14%;
-        margin-top: 20px;
-        h2 {
-            margin: 0;
-            margin-bottom: 5%;
-            @media ( max-width: 550px){
-                margin-bottom: 10%;
-            }
-            @media (min-width:1400px){
-                font-size: 30px;
-             }
+    .picture-container {
+      .picture {
+        margin-left: 150px;
+        margin-bottom: 50px;
+        background-image: url("../../assets/ahmed.jpg");
+        background-size: cover;
+        background-position: center;
+        width: 200px;
+        height: 200px;
+        border-radius: 100px;
+        @media (max-width: 550px) {
+          margin: 0;
         }
-    }
-    .experience { 
-        padding-bottom: 5%;
-        margin-top: 20px;
-        h2 {
-            margin: 0;
-            margin-bottom: 5%;
-            @media ( max-width: 550px){
-                margin-bottom: 10%;
-            }
-            @media (min-width:1400px){
-                font-size: 30px;
-             }
+        @media (min-width: 1400px) {
+          width: 400px;
+          height: 400px;
+          border-radius: 200px;
+          margin-top: 50px;
         }
+      }
     }
+  }
+  .scroll {
+    text-align: center;
+    padding-bottom: 10%;
+    margin-right: 30px;
+    @media (max-width: 550px) {
+      margin: 0;
+      margin-right: 2%;
+      margin-top: 15%;
+    }
+    @media (min-width: 1400px) {
+      font-size: 35px;
+    }
+  }
+  .education {
+    padding-bottom: 14%;
+    margin-top: 20px;
+    h2 {
+      margin: 0;
+      margin-bottom: 5%;
+      @media (max-width: 550px) {
+        margin-bottom: 10%;
+      }
+      @media (min-width: 1400px) {
+        font-size: 30px;
+      }
+    }
+  }
+  .experience {
+    padding-bottom: 5%;
+    margin-top: 20px;
+    h2 {
+      margin: 0;
+      margin-bottom: 5%;
+      @media (max-width: 550px) {
+        margin-bottom: 10%;
+      }
+      @media (min-width: 1400px) {
+        font-size: 30px;
+      }
+    }
+  }
 }
-
-
-
-
