--- a/src/components/Project/Project.scss
+++ b/src/components/Project/Project.scss
@@ -1,38 +1,40 @@
 .project-container {
-    cursor: pointer;
-    width: 285px;
-    height: 200px;
-    background-color: white;
-    margin-right: 40px;
-    margin-top: 20px;
-    box-shadow: 1px 1px 3px lightgray;
-    @media (max-width: 550px){
-        margin: 0;
-        margin-bottom: 25px;
-      }
-      @media ( min-width: 1400px){
-       width: 385px;
-       height: 270px;
+  cursor: pointer;
+  width: 350px;
+  height: 250px;
+  background-color: white;
+  margin-right: 40px;
+  margin-top: 20px;
+  box-shadow: 1px 1px 3px lightgray;
+  border-radius: 10px;
+  overflow: hidden;
+  @media (max-width: 550px) {
+    margin: 0;
+    margin-bottom: 25px;
+  }
+  @media (min-width: 1400px) {
+    width: 385px;
+    height: 270px;
+  }
+  .project-img {
+    width: 100%;
+    height: 180px;
+    margin-bottom: 10px;
+    border: none;
+    @media (min-width: 1400px) {
+      height: 175px;
     }
-    .project-img {
-        width: 100%;
-        height: 125px;
-        margin-bottom: 10px;
-        border: none;
-        @media ( min-width: 1400px){
-            height: 175px;
-        }
+  }
+  .titles {
+    margin-left: 10px;
+
+    h4 {
+      margin: 0%;
+      margin-bottom: 10px;
     }
-    .titles {
-        margin-left: 10px;
-        
-        h4 {
-            margin: 0%;
-            margin-bottom: 10px;
-        }
-        @media (min-width: 1400px){
-            display: flex;
-            flex-direction: column;
-        }
+    @media (min-width: 1400px) {
+      display: flex;
+      flex-direction: column;
     }
+  }
 }
