--- a/src/components/Project/Project.scss
+++ b/src/components/Project/Project.scss
@@ -1,7 +1,7 @@
 .project-container {
   cursor: pointer;
   width: 350px;
-  height: 250px;
+  padding-bottom: 20px;
   background-color: white;
   margin-right: 40px;
   margin-top: 20px;
